<resources>
    <string name="app_name">placexpress</string>


    <string name="title_section1">Categories</string>
    <string name="title_section2">Nearby</string>
    <string name="title_section3">About</string>
    <string name="title_section4">Events</string>

    <!-- Strings for company activity class -->
    <string name="business_services">Business Services</string>
    <string name="entertainment">Entertainment</string>
    <string name="shopping">Shopping</string>
    <string name="food_drinks">Food And Drinks</string>
    <string name="buildings">Buildings</string>
    <string name="accommodation">Accommodation</string>
    <string name="health">Health</string>
    <string name="financial_services">Financial Services</string>
    <string name="government">Government Institutions</string>
    <string name="properties">Properties</string>
    <string name="transport">Transport</string>
    <string name="automotive">Automotive</string>
    <string name="industry">Industries</string>
    <string name="public_services">Public Services</string>
    <string name="personal_services">Personal Services</string>
    <string name="sports">Sports/Recreation</string>
    <string name="computers">Computers/Internet</string>
    <string name="construction">Building And Construction</string>


    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="add_biz">Add your Business to placexpress</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">Business Details</string>
    <string name="title_activity_company">Sub Categories</string>
    <string name="Search">action_search</string>
    <string name="action_share">Share</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">Location</string>
    <string name="nearby_text">Nearby</string>
    <string name="about_text">About</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_add_business">AddBusiness</string>

    <string name="category_prompt">Pick a category</string>
    <string name="subcategory_prompt">Pick a subcategory</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_intro">Intro</string>
    <string name="nav_links">Links</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_con">Terms/Conditions</string>
    <string name="deals">Deals</string>
    <string name="events">Events</string>
    <string name="categories">Categories</string>
    <string name="about_us">About Us</string>
    <string name="title_activity_transport">Transport</string>
    <string name="activity_business">Business Services</string>
</resources>
