<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!-- Settings widget -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <!-- Search widget -->
    <item android:id="@+id/action_search"
        android:title="@string/Search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <!-- Refresh -->
    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom"/>

    <!-- Location -->
    <item android:id="@+id/menu_location"
        android:icon="@drawable/ic_action_location"
        android:title="@string/menu_location"
        app:showAsAction="ifRoom" />
</menu>
